@@ -66,7 +66,7 @@ strtoull(const char *nptr, char **endptr, int base)
   if (any < 0)
   {
     acc = ULONG_MAX;
-    errno = ERANGE;
+    __set_errno ( ERANGE );
   }
   else if (neg)
     acc = -acc;
